# LegoLLM

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  create_dummy_bin.py  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  test.yml
configs/datasets/: README.md  sample_input.yaml  the_verdict.yaml  tiny_shakespeare.yaml
configs/train/: the_verdict.yaml
data/: README.md  blog.txt  bpe_tokenizer.json  bpe_tokenizer_readable.txt  create_shards.py  download_data.py  prepare.py  utils.py  vocab.json
data/finetuning/: instruction_dataset.json  instruction_dataset_reflection_instruction.jsonl  instruction_dataset_reflection_instruction_bakup.jsonl  instruction_dataset_test_responses.json  instruction_dataset_test_responses_reflection.json  sample_data.json
data/processed/sample_input/: meta.json
data/processed/the_verdict/: README.md  meta.json
data/processed/the_verdict-old/: meta.json
data/processed/tiny_shakespeare/: README.md  meta.json
data/raw/: README.md
data/raw/sample_input/: sample_input.txt
data/raw/the-verdict/: README.md
data/raw/tiny_shakespeare/: README.md
data/tokenizers/: sample_input_regex_bpe.json  test_dataset_regex_bpe.txt  the_verdict_regex_bpe.json  the_verdict_regex_bpe.txt  tiny_shakespeare_regex_bpe.json  tiny_shakespeare_regex_bpe.txt
docs/: getting-started.md  index.md
docs/architecture/: foundations.md  tokenization.md
legollm/: __init__.py  config.py  logging.py  utils.py
legollm/architectures/: __init__.py  gpt2.py  llama3.py  qwen3.py
legollm/components/: __init__.py
legollm/components/attention/: __init__.py  grouped_query.py  multi_head.py
legollm/components/blocks/: __init__.py  transformer.py
legollm/components/embeddings/: __init__.py  positional.py  rope.py  token.py  transformer.py
legollm/components/feedforward/: __init__.py  mlp.py  swiglu.py
legollm/components/normalization/: __init__.py  layer_norm.py  rms_norm.py
legollm/core/: __init__.py  exceptions.py  interfaces.py
legollm/core/tokenization/: README.md
legollm/data/: dataloader.py
legollm/finetuning/: __init__.py  chat_format.py  datasets.py  instruction.py
legollm/generation/: __init__.py  generate.py
legollm/models/: __init__.py  attention.py  generate.py  positional_embedding.py  token_embedding.py  transformer_embeddings.py
legollm/models/architectures/: __init__.py  gpt.py
legollm/optimization/: __init__.py  kv_cache.py
legollm/peft/: __init__.py  lora.py
legollm/post_training/: __init__.py  ollama.py
legollm/post_training/providers/: __init__.py  base.py  ollama_provider.py  openai_provider.py
legollm/post_training/sft/: README.md  __init__.py  evaluate.py  instruction_dataset.py  trainer.py
legollm/training/: __init__.py  trainer.py
scripts/: README.md  __init__.py  dataset_summary.py  download_data.py  generate.py  prepare.py  summary.py  train.py
scripts/data/: __init__.py  dataset_summary.py  download_data.py
scripts/finetuning/: __init__.py  fix_unicode_escape.py  generate_instruction_dataset.py
scripts/post_training/: README.md  chat.py  evaluate.py  evaluate_reflection.py  generate_instruction_dataset.py  reflection.py  sft.py
src/: __init__.py
src/core/: logging.py  utils.py
src/core/tokenization/: tokenizer.py
src/legollm/: __init__.py
src/legollm/core/: __init__.py  config.py  interfaces.py  preprocessor.py  tokenizer.py  utils.py
tests/: conftest.py
tests/integration/: __init__.py
tests/integration/core/: __init__.py  test_regex_bpe_integration.py  test_simple_tokenizer_integration.py  test_tokenization.py
tests/integration/models/: __init__.py  test_token_embedding_integration.py
tests/integration/scripts/: __init__.py  test_prepare_integration.py
tests/unit/: conftest.py
tests/unit/core/: __init__.py
tests/unit/data/: __init__.py  test_dataloader.py  test_prepare.py
tests/unit/fixtures/: bpe_readable_expected.txt
tests/unit/generation/: test_generate.py
tests/unit/models/: __init__.py  (+6 more)
(+32 files in other folders)
